--- a/assets/bib/references.bib
+++ b/assets/bib/references.bib
@@ -3,12 +3,13 @@
   url={https://mohsenebrahimy.ir}
 }
 
-@book{severance2016py4e,
+@online{severance2016py4e,
   author    = {Severance, Charles Russell and Blumenberg, Sue and Hauser, Elliott},
   title     = {Python for Everybody: Exploring Data in Python 3},
   year      = {2016},
   isbn      = {1530051126},
   publisher = {CreateSpace Independent Publishing Platform},
+  url = {https://www.py4e.com/},
   address   = {North Charleston, SC, USA},
   abstract  = {Python for Everybody is designed to introduce students to programming and software
                development through the lens of exploring data. You can think of the Python programming
