--- a/intro.qmd
+++ b/intro.qmd
@@ -363,3 +363,85 @@ format:
 Task
 در نرم‌افزارهایی مانند
 Psychopy
+
+#### مثال حل فیزیک
+
+در ادامه یک مثال فیزیک دبیرستانی همراه با کدنویسی با استفاده از پکیج `SymPy` در پایتون آورده شده است. مثال مربوط به حل یک مسئله‌ی حرکت در خط راست است:
+
+
+یک جسم با سرعت اولیه 
+$v_0 = 10 \frac{m}{s}$
+و شتاب 
+$a = 2 \frac{m}{s^2}$
+شروع به حرکت می‌کند. مکان جسم در لحظه 
+$t=0$
+برابر 
+$x_0 = 5m$
+​است. مکان جسم را در لحظه 
+$t=4s$
+بیابید.
+
+
+- استفاده از `SymPy`
+
+```{python}
+from sympy import *
+init_printing()
+```
+
+- تعریف متغیرها
+
+```{python}
+a = symbols("a")  # شتاب
+v_0 = symbols("v_0")  # سرعت اولیه
+x_0 = symbols("x_0")
+t = symbols("t")  # زمان
+x = symbols("x")  # مکان
+x_t = symbols("x_t")
+
+# t, x = symbols('t x')
+
+display(a, v_0, x_0, x, t)
+```
+
+
+- معادله مکان بر حسب زمان
+
+
+```{python}
+x_eq = 1 / 2 * a * t**2 + v_0 * t + x_0
+display(x_eq)
+```
+
+
+- داده‌های مسئله
+
+```{python}
+v0 = 10  # سرعت اولیه (m/s)
+a = 2    # شتاب (m/s^2)
+x0 = 5   # مکان اولیه (m)
+
+# v0, a, x0 = 10, 2, 5
+```
+
+- معادله مکان بر حسب زمان
+
+```{python}
+x_eq = (1 / 2) * a * t**2 + v0 * t + x0
+display(x_eq)
+```
+
+- نمودار 
+
+```{python}
+display(plot(x_eq, (t, 0, 5)))
+```
+
+
+- مکان در لحظه t = 4
+
+```{python}
+t_value = 4
+x_at_t = x_eq.subs(t, t_value)
+display(x_at_t)
+```
