--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 # پیش گفتار {-}
 
 ```{python}
-#| echo: false
+# | echo: false
 from assets.py.string_tools import digit_en_to_fa
 from jdatetime import datetime as jdt
 
@@ -13,9 +13,7 @@ now = digit_en_to_fa(now)
 به همراه این کتاب می‌توانید یادگیری پایتون را شروع کنید.
 سعی کنید بعد از هر آموزش تمرینات مربوط به آن را انجام دهید.
 نظرات و پیشنهادات خود را می‌توانید از طریق ایمیل
-mhb.s.katebi@gmail.com
-و
-mohsenebrahimy.ir@gmail.com
+[mohsenebrahimy.ir@gmail.com](mailto:mohsenebrahimy.ir@gmail.com)
 برای بهبود کتاب به نویسنده ارسال کنید
 تا در هر بروزرسانی اصلاحات صورت گیرد.
 این نسخه در تاریخ
